--- a/sass/components/main-sections/_hero.scss
+++ b/sass/components/main-sections/_hero.scss
@@ -4,16 +4,36 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  padding: 200px 0;
+  padding: 118px 0;
   text-align: center;
 
   &__title {
     text-transform: uppercase;
-    font-size: 44px;
+    font-size: 26px;
     font-weight: 900;
-    line-height: 1.36;
+    line-height: 1.61;
     color: getColor('brand-tetriary');
     margin-bottom: 30px;
     letter-spacing: 0.06em;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/hero-background@x1.jpg');
+    &__title {
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/hero-background@x2.jpg');
+    padding: 200px 0;
+
+    &__title {
+      font-size: 44px;
+      line-height: 1.36;
+    }
   }
 }
