--- a/sass/components/main-sections/_members.scss
+++ b/sass/components/main-sections/_members.scss
@@ -1,6 +1,7 @@
 .members {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .member {
   background-color: getColor('brand-tetriary');
@@ -21,5 +22,10 @@
   &__job {
     color: getColor('text-light');
     margin-bottom: 16px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .members {
+    flex-wrap: nowrap;
   }
 }
