--- a/sass/main.css
+++ b/sass/main.css
@@ -674,8 +674,8 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 70px;
-  background-color: blueviolet;
+  padding: 32px;
+  background-color: #fff;
   z-index: 999;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
@@ -685,29 +685,17 @@ body {
   transform: translateX(0);
 }
 
-.menu-mobile__butt {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  min-height: 40px;
-  min-width: 40px;
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-  fill: blue;
-  cursor: pointer;
-  border: none;
-  border-radius: 50%;
-  outline: none;
+.menu-container .menu-mobile {
   position: absolute;
   top: 16px;
   right: 16px;
+  color: #fff;
 }
 
-.menu-mobile__link {
-  font: "Roboto";
-  color: #212121;
-  font-weight: 500;
+.menu-mobile {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  color: #fff;
   font-size: 40px;
-  line-height: 1, 17;
-}/*# sourceMappingURL=main.min.css.map */
+}/*# sourceMappingURL=main.css.map */
