--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,4 +16,4 @@
 @import 'components/modal/_modal-look';
 @import 'components/modal/_forms';
 @import 'components/modal/_checkbox';
-@import 'components/_mobile-menu.scss';
+@import 'components/_mobile-menu';
