--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,10 +1,6 @@
-.menu-toggle {
+.menu-mobile__button {
   min-height: 40px;
   min-width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
   margin: 0;
   padding: 0;
   background-color: transparent;
@@ -15,14 +11,13 @@
 }
 
 @media (min-width: 768px) {
-  .menu-toggle {
+  .menu-mobile_button {
     display: none;
   }
 }
 
-.menu-toggle:hover,
-.menu-toggle:focus {
-  background-color: rgba(0, 0, 0, 0.1);
+.menu-mobile:hover,
+.menu-mobile:focus {
 }
 
 .menu-container {
@@ -31,10 +26,9 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
-  background-color: #3f51b5;
+  padding: 70px;
+  background-color: blueviolet;
   z-index: 999;
-
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
@@ -43,22 +37,30 @@
   transform: translateX(0);
 }
 
-.menu-container .menu-toggle {
+.menu-mobile__butt {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  min-height: 40px;
+  min-width: 40px;
+  margin: 0;
+  padding: 0;
+  fill: blue;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
   position: absolute;
   top: 16px;
   right: 16px;
-  color: #fff;
 }
 
-.mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+.menu-mobile__links {
 }
-
-.mobile-menu .link {
-  display: block;
-  padding: 10px;
-  color: #fff;
-  text-decoration: none;
+.menu-mobile__link {
+  font: getFont('main');
+  color: getColor('text-primary');
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1, 17;
 }
