--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,7 @@
 .address {
   display: inline-flex;
   flex-direction: column;
+  text-align: center;
 
   &--top {
     margin-top: 11px;
@@ -43,5 +44,11 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     margin-right: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .address {
+    text-align: start;
   }
 }
