--- a/sass/components/main-sections/_client.scss
+++ b/sass/components/main-sections/_client.scss
@@ -1,10 +1,11 @@
 .client {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
 
   &__icon {
-    padding: 17.71px 32px 14.25px;
+    padding: 16px 52px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
     fill: getColor('icons');
@@ -20,5 +21,11 @@
 @media screen and (min-width: 1200px) {
   .client {
     flex-wrap: nowrap;
+    justify-content: space-between;
+    gap: 0;
+
+    &__icon {
+      padding: 17.71px 32px 14.25px;
+    }
   }
 }
