--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import 'utils/_variables.scss';
+@import 'utils/_variables';
 @import 'components/_reset';
 @import 'components/_layout';
 @import 'components/_titles';
