--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,8 +1,7 @@
 .nav {
   display: inline-flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding: 16px 0px;
 
   &__list {
     display: none;
