--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,23 +1,22 @@
 .menu-mobile__button {
   min-height: 40px;
   min-width: 40px;
-  margin: 0;
-  padding: 0;
+  fill: getColor('text-primary');
   background-color: transparent;
   cursor: pointer;
   border: none;
-  border-radius: 50%;
   outline: none;
+}
+.highlight:hover,
+.highlight:focus {
+  fill: getColor('brand-primary');
+  color: getColor('brand-primary');
 }
 
 @media (min-width: 768px) {
-  .menu-mobile_button {
+  .menu-mobile__button {
     display: none;
   }
-}
-
-.menu-mobile:hover,
-.menu-mobile:focus {
 }
 
 .menu-container {
@@ -26,8 +25,9 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 70px;
-  background-color: blueviolet;
+  padding-top: 48px;
+  padding-left: 40px;
+  background-color: getColor('brand-tetriary');
   z-index: 999;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
@@ -39,28 +39,56 @@
 
 .menu-mobile__butt {
   position: absolute;
-  top: 15px;
-  right: 15px;
-  min-height: 40px;
-  min-width: 40px;
-  margin: 0;
-  padding: 0;
-  fill: blue;
+  top: 10px;
+  right: 55px;
+  background-color: transparent;
+  fill: getColor('text-primary');
   cursor: pointer;
   border: none;
   border-radius: 50%;
   outline: none;
   position: absolute;
-  top: 16px;
-  right: 16px;
 }
 
-.menu-mobile__links {
-}
 .menu-mobile__link {
   font: getFont('main');
   color: getColor('text-primary');
   font-weight: 500;
   font-size: 40px;
-  line-height: 1, 17;
+  line-height: 1.17;
+}
+.link--gap {
+  margin-bottom: 32px;
+}
+.tel-gap {
+  margin-top: 302px;
+  margin-bottom: 32px;
+}
+.menu-mobile__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: getColor('brand-primary');
+}
+.menu-mobile__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: getColor('text-light');
+}
+.menu-mobile__sm {
+  display: inline-flex;
+  gap: 20px;
+  padding-top: 64px;
+}
+.menu-mobile__smc {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: getColor('brand-primary');
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
