--- a/sass/components/main-sections/_members.scss
+++ b/sass/components/main-sections/_members.scss
@@ -1,13 +1,15 @@
 .members {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
 }
 .member {
   background-color: getColor('brand-tetriary');
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  width: 100%;
 
   &__caption {
     font-size: 16px;
@@ -26,6 +28,8 @@
 }
 @media screen and (min-width: 1200px) {
   .members {
-    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0;
   }
 }
