--- a/sass/components/main-sections/_work.scss
+++ b/sass/components/main-sections/_work.scss
@@ -1,25 +1,31 @@
 .work {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-  justify-content: space-between;
-
-  &__container {
-    position: relative;
-  }
-  &-caption {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 4px;
-    background-color: rgba(47, 48, 58, 0.8);
-    text-align: center;
-    padding: 27px 0;
-    color: getColor('brand-tetriary');
-  }
+  display: none;
+}
+.work--title {
+  display: none;
 }
 @media screen and (min-width: 1200px) {
   .work {
-    flex-wrap: nowrap;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: space-between;
+
+    &__container {
+      position: relative;
+    }
+    &-caption {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 4px;
+      background-color: rgba(47, 48, 58, 0.8);
+      text-align: center;
+      padding: 27px 0;
+      color: getColor('brand-tetriary');
+    }
+  }
+  .work--title {
+    display: block;
   }
 }
