--- a/sass/components/_layout.scss
+++ b/sass/components/_layout.scss
@@ -25,7 +25,7 @@
     @extend %flex-center;
     justify-content: space-between;
     border-bottom: 1px solid #ececec;
-    padding: 10px 15px;
+    padding: 10px 0 15px;
   }
   &--footer {
     padding: 60px 0;
@@ -63,7 +63,7 @@
     }
 
     &--footer {
-      display: flex;
+      flex-direction: row;
       justify-content: space-around;
     }
   }
