--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -22,11 +22,15 @@
   }
 }
 .newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   &__original {
     border: none;
     outline: none;
     background-color: transparent;
-    min-width: 328px;
+    width: 85vw;
   }
   &__look {
     font-weight: 400;
@@ -43,12 +47,23 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    margin-right: 12px;
+    margin: 0 15px 20px 15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .address {
     text-align: start;
+  }
+  .newsletter {
+    display: block;
+
+    &__original {
+      width: 330px;
+    }
+
+    &__email {
+      margin: 0 12px 0 0;
+    }
   }
 }
