--- a/sass/components/main-sections/_members.scss
+++ b/sass/components/main-sections/_members.scss
@@ -11,6 +11,11 @@
   border-radius: 0px 0px 4px 4px;
   width: 100%;
 
+  &__img {
+    width: 450px;
+    height: 460px;
+  }
+
   &__caption {
     font-size: 16px;
     line-height: 1.19;
@@ -31,5 +36,11 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 0;
+  }
+  .member {
+    &__img {
+      width: 270px;
+      height: 260px;
+    }
   }
 }
