--- a/sass/components/main-sections/_social-media.scss
+++ b/sass/components/main-sections/_social-media.scss
@@ -27,9 +27,9 @@
     font-weight: 700;
     line-height: 1.17;
     color: getColor('brand-tetriary');
-    margin: 12px 0 20px;
     display: block;
     text-align: center;
+    margin: 60px 0 20px;
   }
   &--gap {
     padding: 60px auto;
@@ -40,6 +40,7 @@
   .social-media {
     &__title {
       text-align: start;
+      margin-top: 12px;
     }
     &--gap {
       padding: 0;
