--- a/sass/components/main-sections/_hero.scss
+++ b/sass/components/main-sections/_hero.scss
@@ -17,6 +17,7 @@
     letter-spacing: 0.06em;
   }
 }
+/*
 @media screen and (min-width: 480px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -76,3 +77,4 @@
     }
   }
 }
+*/
