--- a/sass/components/_layout.scss
+++ b/sass/components/_layout.scss
@@ -2,8 +2,8 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  &__technology {
-    padding-bottom: 0;
+  &--work {
+    padding: 0;
   }
   &--light {
     background-color: getColor('background-light');
@@ -18,7 +18,7 @@
   justify-content: center;
 }
 .container {
-  max-width: 70vw;
+  max-width: 100vw;
   margin: 0 auto;
 
   &--header {
@@ -28,14 +28,17 @@
     padding: 10px 0 15px;
   }
   &--footer {
+    @extend %flex-center;
     padding: 60px 0;
-    display: flex;
     flex-direction: column;
     align-items: center;
   }
   &__buttons {
     @extend %flex-center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
     gap: 8px;
+    padding: 0 15px;
   }
 }
 @media screen and (min-width: 480px) {
@@ -46,13 +49,34 @@
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+
+    &--header {
+      padding: 15px 21px;
+    }
+    &--footer {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      flex-wrap: wrap;
+    }
+    &__buttons {
+      flex-wrap: nowrap;
+      justify-content: center;
+    }
+  }
+  .section {
+    &--technology {
+      padding-bottom: 45px;
+    }
   }
 }
+
 @media screen and (min-width: 1200px) {
   .section {
     padding-top: 94px;
     padding-bottom: 94px;
-    &__technology {
+
+    &--technology {
       padding-bottom: 0;
     }
   }
@@ -60,13 +84,11 @@
     max-width: 1200px;
 
     &--header {
-      @extend %flex-center;
-      justify-content: space-between;
-      border-bottom: 1px solid #ececec;
+      padding: 25px 5px;
     }
-
     &--footer {
       flex-direction: row;
+      flex-wrap: nowrap;
       justify-content: space-around;
     }
   }
