--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -15,7 +15,7 @@
   &--light {
     color: getColor('text-primary');
     box-shadow: none;
-    padding: 6px 22px;
+    padding: 6px 35px;
     font-weight: 500;
     line-height: 1.62;
     letter-spacing: 0.03em;
@@ -47,5 +47,21 @@
     justify-content: center;
     padding: 10px 76px;
     margin: 30px auto 40px;
+  }
+}
+
+.highlight {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus-within {
+    color: getColor('brand-primary');
+    fill: getColor('brand-primary');
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .button--light {
+    padding: 6px 22px;
   }
 }
