--- a/sass/components/main-sections/_card.scss
+++ b/sass/components/main-sections/_card.scss
@@ -6,7 +6,7 @@
 }
 .card {
   border: 1px solid #eeeeee;
-  width: 370px;
+  width: 450px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
@@ -19,6 +19,11 @@
     & .card__description {
       transform: translateY(0);
     }
+  }
+  &__img {
+    display: block;
+    width: 100%;
+    height: auto;
   }
   &__overflow {
     position: relative;
@@ -55,5 +60,15 @@
     font-size: 16px;
     line-height: 1.87;
     color: getColor('text-light');
+  }
+}
+@media screen and (min-width: 768px) {
+  .card {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card {
+    width: 370px;
   }
 }
