--- a/sass/components/main-sections/_client.scss
+++ b/sass/components/main-sections/_client.scss
@@ -5,7 +5,7 @@
   gap: 30px;
 
   &__icon {
-    padding: 16px 52px;
+    padding: 16px 5vw;
     border: 1px solid #afb1b8;
     border-radius: 4px;
     fill: getColor('icons');
@@ -18,8 +18,26 @@
     }
   }
 }
+
+@media screen and (min-width: 480px) {
+  .client {
+    &__icon {
+      padding: 16px 52px;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .client {
+    &__icon {
+      padding: 16px 60px;
+    }
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .client {
+    flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
     gap: 0;
