--- a/sass/components/main-sections/_social-media.scss
+++ b/sass/components/main-sections/_social-media.scss
@@ -31,8 +31,19 @@
     text-align: center;
     margin: 60px 0 20px;
   }
-  &--gap {
-    padding: 60px auto;
+}
+
+@media screen and (min-width: 768px) {
+  .social-media {
+    &__title {
+      margin-top: 0;
+    }
+    &--gap {
+      padding: 0;
+    }
+    &--container {
+      padding-bottom: 40px;
+    }
   }
 }
 
@@ -40,7 +51,6 @@
   .social-media {
     &__title {
       text-align: start;
-      margin-top: 12px;
     }
     &--gap {
       padding: 0;
