--- a/sass/components/main-sections/_technology.scss
+++ b/sass/components/main-sections/_technology.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0 15vw;
 
   &__icon {
     background-color: getColor('background-light');
@@ -38,25 +39,36 @@
 @media screen and (min-width: 768px) {
   .technology {
     flex-direction: row;
-    padding: 0 auto;
+    flex-wrap: wrap;
+    padding: 0 0;
+    gap: 30px;
 
+    &__paragraph {
+      color: getColor('text-light');
+      line-height: 1.71;
+      margin-top: 10px;
+      max-width: 354px;
+
+      &--end {
+        margin-bottom: 0;
+      }
+    }
     &__icon {
       padding: 25px 142px;
+    }
+    &__title {
+      text-align: start;
     }
   }
 }
 @media screen and (min-width: 1200px) {
   .technology {
     flex-direction: row;
-    gap: 30px;
+    flex-wrap: nowrap;
     padding: 0 auto;
 
     &__icon {
       padding: 25px 100px;
-    }
-
-    &__title {
-      text-align: start;
     }
   }
 }
