--- a/sass/components/modal/_modal-look.scss
+++ b/sass/components/modal/_modal-look.scss
@@ -22,11 +22,6 @@
   opacity: 100%;
   transition: scale 1s ease, opacity 1s ease;
 
-  &__close-button {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-  }
   &__title {
     font-weight: 700;
     font-size: 20px;
@@ -44,8 +39,14 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   padding: 6px 6px 6px 5px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
 }
-
+.close-button:focus-within,
+.close-button:active {
+  fill: getColor('brand-primary');
+}
 .is-hidden {
   opacity: 0;
   visibility: hidden;
