--- a/sass/components/main-sections/_card.scss
+++ b/sass/components/main-sections/_card.scss
@@ -3,11 +3,11 @@
   gap: 30px;
   margin-top: 50px;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .card {
   border: 1px solid #eeeeee;
-  width: 450px;
+  width: 90vw;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
@@ -63,9 +63,17 @@
     color: getColor('text-light');
   }
 }
+
+@media screen and (min-width: 480px) {
+  .card {
+    width: 450px;
+  }
+}
 @media screen and (min-width: 768px) {
   .card {
     width: 354px;
+
+    justify-content: flex-start;
   }
 }
 @media screen and (min-width: 1200px) {
